src/BOPTest/BOPTest_CheckCommands.cxx
@@ -133,6 +133,13 @@ Standard_Integer bopcheck (Draw_Interpretor& di, Standard_Integer n,  const char
         continue;
       }
       //
+      if (aTypeInt == 4) {
+        BOPDS_InterfEF& aEF=aEFs(i);
+        if (aEF.CommonPart().Type()==TopAbs_SHAPE) {
+          continue;
+        }
+      }
+      //
       const TopoDS_Shape& aS1 = theDS->Shape(nI1);
       const TopoDS_Shape& aS2 = theDS->Shape(nI2);
       //
